fix edge h1 after content being too wide

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -222,6 +222,9 @@ section{
   .projects > div{
     margin: 0 auto;
   }
+  h1::after{
+    width: 50%;
+  }
 }
 .arts > div,
 #about p{
